ref #6981 upgrade cdmlib-remote java8->java11